mdapipkg/unpackaged/objects/Dispute_Info__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_User__c</fullName>
        <label>Closed User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Time__c</fullName>
        <label>Create Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Mod_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Mod_Time__c</fullName>
        <label>Last Modified Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Id__c</fullName>
        <label>Library Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_User__c</fullName>
        <label>Open User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Seq_Number__c</fullName>
        <label>Sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Dispute Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dispute Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispute Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>